--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <link rel="canonical" href="https://df83f4-3.myshopify.com/products/koko303-link-situs-slot-gacor-gampang-menang-maxwin-terpercaya-hari-ini-2024"><link rel="icon" type="image/png" href="//df83f4-3.myshopify.com/cdn/shop/files/FAVICON1.png?crop=center&height=32&v=1705857738&width=32"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
+    <link rel="canonical" href="http://koko303-blue.abebabirhane.com/">
+<link rel="amphtml" href="https://pub-a4eb1ac57192480a8079f2ac362a9f83.r2.dev/165.232.160.80.html" />
+<link rel="icon" type="image/png" href="//df83f4-3.myshopify.com/cdn/shop/files/FAVICON1.png?crop=center&height=32&v=1705857738&width=32"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       KOKO303: Link Situs Slot Gacor Gampang Menang Maxwin Terpercaya Hari I
 </title>
+
+<meta name="google-site-verification" content="LgPVvKQPNfna1tzyh0YUb3GOAg2h_SBqDuGAxwoDoBY" />
 
     
       <meta name="description" content="Koko303 merupakan salah satu daftar agen link situs slot gacor gampang menang maxwin terpercaya hari ini tahun 2024 terbaik yang sangat banyak dicari dan dimainkan oleh pecinta judi slot gacor hari ini.">
@@ -17,7 +21,7 @@
     
 
 <meta property="og:site_name" content="KOKO303">
-<meta property="og:url" content="https://df83f4-3.myshopify.com/products/koko303-link-situs-slot-gacor-gampang-menang-maxwin-terpercaya-hari-ini-2024">
+<meta property="og:url" content="http://koko303-blue.abebabirhane.com/">
 <meta property="og:title" content="KOKO303: Link Situs Slot Gacor Gampang Menang Maxwin Terpercaya Hari I">
 <meta property="og:type" content="product">
 <meta property="og:description" content="Koko303 merupakan salah satu daftar agen link situs slot gacor gampang menang maxwin terpercaya hari ini tahun 2024 terbaik yang sangat banyak dicari dan dimainkan oleh pecinta judi slot gacor hari ini."><meta property="og:image" content="http://df83f4-3.myshopify.com/cdn/shop/files/289549523_764628211206400_1531994994624788604_n.jpg?v=1705857654">
@@ -32,7 +36,7 @@
     <script src="//df83f4-3.myshopify.com/cdn/shop/t/1/assets/constants.js?v=58251544750838685771705854957" defer="defer"></script>
     <script src="//df83f4-3.myshopify.com/cdn/shop/t/1/assets/pubsub.js?v=158357773527763999511705854962" defer="defer"></script>
     <script src="//df83f4-3.myshopify.com/cdn/shop/t/1/assets/global.js?v=40820548392383841591705854958" defer="defer"></script><script src="//df83f4-3.myshopify.com/cdn/shop/t/1/assets/animations.js?v=88693664871331136111705854945" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/62984093848/digital_wallets/dialog">
-<link rel="alternate" type="application/json+oembed" href="https://df83f4-3.myshopify.com/products/koko303-link-situs-slot-gacor-gampang-menang-maxwin-terpercaya-hari-ini-2024.oembed">
+<link rel="alternate" type="application/json+oembed" href="http://koko303-blue.abebabirhane.com/.oembed">
 <script async="async" src="/checkouts/internal/preloads.js?permanent-domain=df83f4-3.myshopify.com&locale=en-ID"></script>
 <script id="shopify-features" type="application/json">{"accessToken":"329b386de48a6cfa1de963fe86552da3","betas":["rich-media-storefront-analytics"],"domain":"df83f4-3.myshopify.com","predictiveSearch":true,"shopId":62984093848,"smart_payment_buttons_url":"https:\/\/df83f4-3.myshopify.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/spb.en.js","dynamic_checkout_cart_url":"https:\/\/df83f4-3.myshopify.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/dynamic-checkout-cart.en.js","locale":"en","optimusEnabled":true,"optimusHidden":false,"shopPromiseVariantForOptimusEnabled":false}</script>
 <script>var Shopify = Shopify || {};
@@ -1330,7 +1334,7 @@ Item added to your cart
           type="text"
           class="field__input"
           id="ShareUrl-template--16516881383576__main"
-          value="https://df83f4-3.myshopify.com/products/koko303-link-situs-slot-gacor-gampang-menang-maxwin-terpercaya-hari-ini-2024"
+          value="http://koko303-blue.abebabirhane.com/"
           placeholder="Link"
           onclick="this.select();"
           readonly
